--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -7,6 +7,7 @@
     <title><%= title %></title>
     <link rel="stylesheet" href="styles/bgimage.css">
     <link rel="stylesheet" href="styles/footflex.css">
+    <link rel="stylesheet" href="styles/headerstyle.css">
     <link
             href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
             rel="stylesheet"
