--- a/views/contact-us.ejs
+++ b/views/contact-us.ejs
@@ -1,6 +1,7 @@
 <%- include('includes/head.ejs', { title: 'Contact-us' }) %>
 <!-- <link rel="stylesheet" href="/styles/forms.css"> -->
 <!-- <link rel="stylesheet" href="/styles/auth.css"> -->
+<link rel="stylesheet" href="/styles/aboutstyle.css">
 </head>
 
 
@@ -12,12 +13,88 @@
 
 <body>
 <%- include('includes/header.ejs') %>
-<main style="text-align: center">
-    <h1>About Us</h1>
-        <div class="about">
-            
+<main>
+    <h1 style="text-align: center">About Us</h1>
+        <div class="about" >
+            Mess Portal of IIT BHU is responsible for providing transparency to the students about mess and ensuring that
+            tasks related to mess remain as smooth as possible. We are the students of IIT BHU who caters to the needs of
+            6000 plus students throughout the year. The current mess portal includes a fully digital process for
+            registration, attendance, menu, and much more.
         </div>
 </main>
-</body>
+<footer class="bg-dark text-center text-white">
+    <!-- Grid container -->
+    <div class="container p-4 pb-0">
+        <!-- Section: Social media -->
+        <section class="mb-4">
+            <!-- Facebook -->
+            <a
+                    class="btn btn-primary btn-floating m-1"
+                    style="background-color: #3b5998;"
+                    href="https://www.facebook.com/"
+                    role="button"
+            ><i class="fab fa-facebook-f"></i
+                ></a>
 
+            <!-- Twitter -->
+            <a
+                    class="btn btn-primary btn-floating m-1"
+                    style="background-color: #55acee;"
+                    href="https://twitter.com/"
+                    target="_blank"
+                    role="button"
+            ><i class="fab fa-twitter"></i
+                ></a>
+
+            <!-- Google -->
+            <a
+                    class="btn btn-primary btn-floating m-1"
+                    style="background-color: #dd4b39;"
+                    href="https://www.google.com/"
+                    target="_blank"
+                    role="button"
+            ><i class="fab fa-google"></i
+                ></a>
+
+            <!-- Instagram -->
+            <a
+                    class="btn btn-primary btn-floating m-1"
+                    style="background-color: #ac2bac;"
+                    href="https://www.instagram.com/"
+                    target="_blank"
+                    role="button"
+            ><i class="fab fa-instagram"></i
+                ></a>
+
+            <!-- Linkedin -->
+            <a
+                    class="btn btn-primary btn-floating m-1"
+                    style="background-color: #0082ca;"
+                    href="https://www.linkedin.com/"
+                    target="_blank"
+                    role="button"
+            ><i class="fab fa-linkedin-in"></i
+                ></a>
+            <!-- Github -->
+            <a
+                    class="btn btn-primary btn-floating m-1"
+                    style="background-color: #333333;"
+                    href="https://github.com/"
+                    target="_blank"
+                    role="button"
+            ><i class="fab fa-github"></i
+                ></a>
+        </section>
+        <!-- Section: Social media -->
+    </div>
+    <!-- Grid container -->
+
+    <!-- Copyright -->
+    <div class="text-center p-2" style="background-color: rgba(0, 0, 0, 0.1);">
+        © 2022 Copyright:
+        <a class="text-white" href="https://www.prastuti.in/" target="_blank">MessMadeEasy.com</a>
+    </div>
+    <!-- Copyright -->
+</footer>
+</body>
 </html>
