--- a/views/hostel.ejs
+++ b/views/hostel.ejs
@@ -1,29 +1,16 @@
 <%- include('includes/head.ejs', { title: 'Hostel '+ id}) %>
+<style>
+    #doc-title span .name {
+        display:none;
+    }
+</style>
 </head>
 
-<body>
+<body style="align-items: center; width: 100%">
 <%- include('includes/header.ejs') %>
 <main style="text-align: center">
     <h1>Mess <%= id %> </h1>
-    <td class="sites-layout-tile sites-tile-name-content-1">
-        <div dir="ltr">
-            <div>
-                <div>
-                    <div class="sites-embed-align-left-wrapping-off">
-                        <div class="sites-embed-border-on sites-embed sites-embed-full-width" style="width:100%;"><h4
-                                    class="sites-embed-title">IIT Gn Mess Menu Jan'14</h4>
-                            <div class="sites-embed-object-title" style="display:none;">IIT Gn Mess Menu Oct'13</div>
-                            <div class="sites-embed-content sites-embed-type-spreadsheet">
-                                <iframe src="https://spreadsheets.google.com/spreadsheet/loadredirect?authuser=0&amp;chrome=false&amp;key=0Ajc95pPKjPe1dFFtRjN3dlFseTI5WVV2czBaYkEzalE&amp;output=html&amp;pubredirect=true&amp;widget=true"
-                                        title="IIT Gn Mess Menu Oct'13" id="673294248" width="100%" height="680"
-                                        frameborder="0"></iframe>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <br></div>
-            <br></div>
-    </td>
+    <img src="/images/mess1.jpg" height="520">
 </main>
 </body>
 
