--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -62,7 +62,7 @@
                 </ul>
             </div>
             <div class="d-flex justify-content-end collapse navbar-collapse">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0 d-flex justify-content-end">
+                <ul class="navbar-nav ml-auto mb-2 mb-lg-0 d-flex justify-content-end">
                     <li class="nav-item">
                         <a class="nav-link" href="/login">LoginIn</a>
                     </li>
