--- a/views/balance.ejs
+++ b/views/balance.ejs
@@ -5,9 +5,10 @@
 
 <body>
 <%- include('includes/header.ejs') %>
-<main style="text-align: center">
+<main style="text-align: center; min-height: 495px">
     <h1>Balance</h1>
 </main>
+<%- include('includes/footer.ejs') %>
 </body>
 
 </html>
