--- a/views/hostel.ejs
+++ b/views/hostel.ejs
@@ -8,9 +8,10 @@
 
 <body style="align-items: center; width: 100%">
 <%- include('includes/header.ejs') %>
-<main style="text-align: center">
+<main style="text-align: center; min-height: 495px">
     <h1>Mess <%= id %> </h1>
     <img src="/images/mess1.jpg" height="520">
 </main>
+<%- include('includes/footer.ejs') %>
 </body>
 </html>
