--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -2,7 +2,7 @@
 </head>
 <body>
 <%- include('includes/header.ejs') %>
-<main style="text-align: center">
+<main style="text-align: center; min-height: 495px">
     <h1>Demo Text</h1>
 
 </main>
