--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -1,9 +1,47 @@
 <%- include('includes/head.ejs', { title: 'Welcome' }) %>
+<link rel="stylesheet" href="/styles/welcometable.css">
 </head>
 <body>
 <%- include('includes/header.ejs') %>
 <main style="text-align: center; min-height: 495px">
-    <h1>Demo Text</h1>
+    <h1 style="font-size: 60px; font-weight: bold">MessMadeEasy</h1>
+    <div class="intro">
+        Welcome to MessMadeEasy, the mess portal for students of IIT (BHU) Varanasi!
+    </div>
+    <p class="info">
+        There are total six messes in the campus. Students can easily change mess at any point of time.<br>
+        Service in the mess shall be between scheduled hours only & closed after lunch on every Saturday for maintenance.<br>
+        The Mess timings are as follows and the students should strictly adhere to these timings.
+    </p>
+    <div class="tableback">
+    <table class="table table-striped">
+        <thead>
+        <tr>
+            <th scope="col">#</th>
+            <th scope="col">Meal</th>
+            <th scope="col">Meal Timing</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <th scope="row">1</th>
+            <td>Breakfast</td>
+            <td>7:30AM to 9:30AM</td>
+
+        </tr>
+        <tr>
+            <th scope="row">2</th>
+            <td>Lunch</td>
+            <td>12:00PM to 2:00PM</td>
+        </tr>
+        <tr>
+            <th scope="row">3</th>
+            <td>Dinner</td>
+            <td>8:00PM to 10:00PM</td>
+        </tr>
+        </tbody>
+    </table>
+    </div>
 
 </main>
 </body>
