--- a/views/mess-change.ejs
+++ b/views/mess-change.ejs
@@ -25,10 +25,10 @@
                     <input type="email" value="<%= data.email %> " readonly/>
                     <i class="fa fa-envelope"></i>
                 </div>
-                <div class="areas">
+                <!-- <div class="areas">
                     <input type="text" placeholder="Current Mess" name="current"/>
                     <i class="fas fa-utensils"></i>
-                </div>
+                </div> -->
                 <div class="areas">
                     <select name="messname" id="messname" name="changed">
                         <div id="colorOptions">
@@ -54,7 +54,7 @@
                     </select>
                     <i class="fas fa-utensils"></i>
                 </div>
-                <textarea cols="15" rows="5" placeholder="Your feedback"></textarea>
+                <textarea cols="15" rows="5" placeholder="Reason for mess change"></textarea>
                 <button type="submit">Submit</button>
             </form>
         </div>
