--- a/views/attendance.ejs
+++ b/views/attendance.ejs
@@ -5,19 +5,18 @@
 <%- include('includes/header.ejs') %>
 <main style="text-align: center; min-height: 495px">
     <h1>Attendance</h1>
-    <% if(!locals.isAuth){ console.log(locals.isAuth) %>
-        <h2>LogIn first!</h2>
-        <a href="/login"><span style="font-size: 25px">LogIn></span></a>
+        <!-- <h2>LogIn first!</h2>
+        <a href="/login"><span style="font-size: 25px">LogIn></span></a> -->
     
-    <% }else{ %>
     <form action="/attendance" method="POST">
         <label for="rollNumber">
             Enter your roll Number
         </label>
         <input type="number" name="rollNumber" id="">
+        <label for="password" >Enter password</label>
+        <input type="password" name="password">
         <button>Submit</button>
     </form>
-    <% } %>
 
 </main>
 <%- include('includes/footer.ejs') %>
