--- a/public/styles/aboutstyle.css
+++ b/public/styles/aboutstyle.css
@@ -5,14 +5,15 @@ main {
     align-items: center;
     justify-content: center;
 }
-.about{
+
+.about {
     text-align: center;
     margin-top: 20px;
     justify-content: left;
     margin-left: 15px;
     margin-right: 15px;
     font-size: 30px;
-    background-color: rgba(255,255,255,0.65);
+    background-color: rgba(255, 255, 255, 0.65);
     border-radius: 0.7em;
     padding: 20px;
     font-weight: revert;
