--- a/views/attendance.ejs
+++ b/views/attendance.ejs
@@ -1,5 +1,6 @@
 <%- include('includes/head.ejs', { title: 'Attendance' }) %>
 <!-- <% include('includes/back.ejs') %> -->
+<link rel="stylesheet" href="/styles/forms.css">
 </head>
 <body>
 <%- include('includes/header.ejs') %>
@@ -7,16 +8,17 @@
     <h1>Attendance</h1>
     <!-- <h2>LogIn first!</h2>
     <a href="/login"><span style="font-size: 25px">LogIn></span></a> -->
-
+    <div class="container">
     <form action="/attendance" method="POST">
         <label for="rollNumber">
-            Enter your roll Number
+
         </label>
-        <input type="number" name="rollNumber" id="">
-        <label for="password">Enter password</label>
-        <input type="password" name="password">
+        <input type="number" name="rollNumber" id="" placeholder="Enter your roll Number">
+        <label for="password"></label>
+        <input type="password" name="password" placeholder="Enter password">
         <button>Submit</button>
     </form>
+    </div>
 
 </main>
 <%- include('includes/footer.ejs') %>
