--- a/views/401.ejs
+++ b/views/401.ejs
@@ -1,5 +1,8 @@
 <%- include('includes/head.ejs', { title: 'Error!' }) %>
 </head>
+
+<!--FOR 401 ERROR-->
+
 <body>
 <%- include('includes/header.ejs') %>
 <main style="text-align: center">
