--- a/views/500.ejs
+++ b/views/500.ejs
@@ -1,5 +1,7 @@
 <%- include('includes/head.ejs', { title: 'Error!' }) %>
 </head>
+
+<!--FOR 500 ERROR-->
 <body>
 <%- include('includes/header.ejs') %>
 <main style="text-align: center">
