--- a/views/hostel.ejs
+++ b/views/hostel.ejs
@@ -10,6 +10,8 @@
 <%- include('includes/header.ejs') %>
 <main style="text-align: center; min-height: 495px">
     <h1>Mess <%= id %> </h1>
+
+<!--    Menu photo-->
     <img src="/images/mess1.jpg" height="520">
 </main>
 <%- include('includes/footer.ejs') %>
