--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -14,6 +14,7 @@
         maintenance.<br>
         The Mess timings are as follows and the students should strictly adhere to these timings.
     </p>
+    <!--    Table -->
     <div class="tableback">
         <table class="table table-striped">
             <thead>
