--- a/views/feedback.ejs
+++ b/views/feedback.ejs
@@ -4,15 +4,21 @@
 
 </head>
 
+<!--Feedback Form-->
+
 <body>
 <%- include('includes/header.ejs') %>
+
 <main style="text-align: center; min-height: 495px">
     <h1 style="padding: 5px;">Feedback</h1>
+
+<!--    Not an active session-->
     <% if(!locals.isAuth){ %>
         <h2>LogIn first!</h2>
         <a href="/login"><span style="font-size: 25px">LogIn></span></a>
 
     <% }else{ %>
+
         <div class="container">
 
             <form action="/feedback" method="POST">
