--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -8,14 +8,14 @@
     <div class="intro">
         Welcome to MessMadeEasy, the mess portal for students of IIT (BHU) Varanasi!
     </div>
-    <p class="info">
+    <p class="info" style="margin: auto; text-align: center;" >
         There are total six messes in the campus. Students can easily change mess at any point of time.<br>
         Service in the mess shall be between scheduled hours only & closed after lunch on every Saturday for
         maintenance.<br>
         The Mess timings are as follows and the students should strictly adhere to these timings.
     </p>
     <!--    Table -->
-    <div class="tableback">
+    <div class="tableback" style="margin: 2rem auto;">
         <table class="table table-striped">
             <thead>
             <tr>
